# GERBLS

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
GERBLS/: blsmodel.pxi  cgerbls.pxd  gerbls.pyx
GERBLS/source/: structure.cpp
GERBLS/source/riptide/: kernels.hpp
docs/: requirements.txt
docs/source/: autodoc.rst  basic_usage.rst  conf.py  full_usage.rst  getting_started.rst  index.rst  install.rst
docs/source/api/: blsmodel.rst  blsresult.rst  clean.rst  index.rst  struct.rst  trmodel.rst  utils.rst
docs/source/examples/: fastbls.ipynb
src/GERBLS/cpp/riptide/: block.hpp  periodogram.hpp  transforms.hpp
src/GERBLS/source/: ffafunc.cpp
src/GERBLS/source/riptide/: snr.hpp
src/gerbls/: __init__.py  blsanalyze.pxi  blsfunc.py  blsmodel.pxi  cgerbls.pxd  clean.py  core.pyx  gerbls.pyx  noisebls.pxi  struct.pxi  trmodel.py  utils.pxi
src/gerbls/cpp/: ffafunc.cpp  ffafunc.hpp  model.cpp  model.hpp  physfunc.cpp  physfunc.hpp  structure.cpp  structure.hpp
tests/: test_bls.py
