[build-system]
requires = ["setuptools >= 61", "Cython >= 3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "GERBLS"
authors = [{name = "Kristo Ment", email = "kristo.ment@gmail.com"}]
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">= 3.8"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy",
]