[build-system]
requires = ["setuptools >= 61", "Cython >= 3.1", "numpy >= 1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "GERBLS"
version = "0.6.0.dev3"
authors = [{name = "Kristo Ment", email = "kristo.ment@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">= 3.8"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = ["numpy >= 1.19"]

[project.optional-dependencies]
extras = ["matplotlib", "scipy"]

[project.urls]
Repository = "https://github.com/kment/GERBLS.git"